# Jarvis-Ears

./: .gitignore  AGENTS.md  README.md  config.example.json  pyproject.toml
.deps/coverage-7.13.5.dist-info/: RECORD
.deps/pygments-2.20.0.dist-info/: RECORD
.deps/pytest-9.0.3.dist-info/: RECORD
docs/: architecture.md  atom-echo-baseline.md  atom-echo-custom-emitter-draft.md  atom-echo-custom-emitter-spike.md  direct-ingest-spike-plan.md  esphome-integration-options.md
experiments/: __init__.py  tcp_audio_collector.py
experiments/esphome/: atom_echo_tcp_emitter.yaml  secrets.example.yaml
experiments/esphome/components/tcp_audio_emitter/: __init__.py  tcp_audio_emitter.cpp  tcp_audio_emitter.h
src/jarvis_ears/: __init__.py  config.py  events.py  logging.py  main.py
src/jarvis_ears/buffer/: __init__.py  ring_buffer.py
src/jarvis_ears/receiver/: __init__.py  base.py  esphome_adapter.py
src/jarvis_ears/stt/: __init__.py  base.py
src/jarvis_ears/vad/: __init__.py  base.py
tests/: test_config.py  test_esphome_adapter.py  test_ring_buffer.py  test_tcp_audio_collector.py
